examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__lambdas@lambda True.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            Lambda(
                                Lambda {
                                    body: PrimaryExpression(
                                        True(
                                            True {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                    parameters: None,
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
