examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__lambdas@lambda a, b = c, *d, **e: a.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            Lambda(
                                Lambda {
                                    body: PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                    parameters: Some(
                                        LambdaParameters {
                                            children: [
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                                DefaultParameter(
                                                    DefaultParameter {
                                                        name: Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        value: PrimaryExpression(
                                                            Identifier(
                                                                Identifier {
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                        [RANGE]
                                                    },
                                                ),
                                                ListSplatPattern(
                                                    ListSplatPattern {
                                                        children: Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        [RANGE]
                                                    },
                                                ),
                                                DictionarySplatPattern(
                                                    DictionarySplatPattern {
                                                        children: Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        [RANGE]
                                                    },
                                                ),
                                            ],
                                            [RANGE]
                                        },
                                    ),
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
