examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__math_operators@px.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                UnaryOperator(
                                    UnaryOperator {
                                        argument: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        operator: Token_Plus(
                                            Token_Plus {
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
