examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__named_expressions@def foo(answer: (p := 42) = 5):  return answer;.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            FunctionDefinition(
                FunctionDefinition {
                    name: Identifier {
                        [RANGE]
                    },
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ReturnStatement(
                                    ReturnStatement {
                                        children: Some(
                                            Expression(
                                                PrimaryExpression(
                                                    Identifier(
                                                        Identifier {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    return_type: None,
                    type_parameters: None,
                    parameters: Parameters {
                        children: [
                            TypedDefaultParameter(
                                TypedDefaultParameter {
                                    value: PrimaryExpression(
                                        Integer(
                                            Integer {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                    name: Identifier {
                                        [RANGE]
                                    },
                                    Type: Type {
                                        children: Expression(
                                            PrimaryExpression(
                                                ParenthesizedExpression(
                                                    ParenthesizedExpression {
                                                        children: Expression(
                                                            NamedExpression(
                                                                NamedExpression {
                                                                    value: PrimaryExpression(
                                                                        Integer(
                                                                            Integer {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                    name: Identifier {
                                                                        [RANGE]
                                                                    },
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                        [RANGE]
                                                    },
                                                ),
                                            ),
                                        ),
                                        [RANGE]
                                    },
                                    [RANGE]
                                },
                            ),
                        ],
                        [RANGE]
                    },
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
